# batbot

./: .env.template  .gitignore  README.md  batbot_architecture.md  batbot_schema.txt  main.py  pyproject.toml  telegram_main.py  terminal_chat.py
agent/: audio_transcriber.py  config.py  email_manager.py  file_writer.py  rag_manager.py  root_agent.py  searcher.py  tools.py
runner/: app_runner.py  local_session_service.py
xploreapi/Test/: test_xploreapi.py
